# flow-doctor

./: .gitignore  .gitleaks.toml  .gitleaksbaseline.json  CHANGELOG.md  README.md  flow-doctor-design-260316.md  pyproject.toml
.github/workflows/: ci.yml  flow-doctor-fix.yml
examples/: smoke_test.py
flow_doctor/: __init__.py
flow_doctor/core/: client.py  config.py  dedup.py  errors.py  handler.py  models.py  rate_limiter.py  scrubber.py
flow_doctor/diagnosis/: __init__.py  agent_provider.py  alpha_engine.py  context.py  git_context.py  knowledge_base.py  provider.py
flow_doctor/digest/: __init__.py  generator.py
flow_doctor/fix/: __init__.py  cli.py  generator.py  pr_creator.py  prompts.py  replay_store.py  scope_guard.py  validator.py
flow_doctor/notify/: base.py  email.py  github.py  slack.py
flow_doctor/remediation/: decision_gate.py  executor.py  playbook.py
flow_doctor/storage/: base.py  sqlite.py
scripts/: publish.sh
tests/: conftest.py  test_action_target.py  test_alpha_engine.py  test_config.py  test_conservative_autofix.py  test_context_assembler.py  test_coverage_gaps.py  test_dedup.py  test_diagnosis_provider.py  test_digest.py  test_fail_loud.py  test_fix_cli.py  test_fix_generator.py  test_git_context.py  test_github_notifier.py  test_handler.py  test_knowledge_base.py  test_models.py  test_notifications.py  test_phase2_integration.py  test_pr_creator.py  test_rate_limiter.py  test_remediation_pipeline.py  test_replay_store.py  test_reporter.py  test_scope_guard.py  test_scrubber.py  test_storage.py  test_validator.py
